--- a/de.bht.fpa.mail.s822248.fsnavigation/plugin.xml
+++ b/de.bht.fpa.mail.s822248.fsnavigation/plugin.xml
@@ -18,5 +18,61 @@
             name="NavPerspective">
       </perspective>
    </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <category
+            id="de.bht.fpa.mail.s822248.fsnavigation.commands.category"
+            name="FS_Navigation">
+      </category>
+      <command
+            categoryId="de.bht.fpa.mail.s822248.fsnavigation.commands.category"
+            id="de.bht.fpa.mail.s822248.fsnavigation.commands.sampleCommand"
+            name="Set Base Directory">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="de.bht.fpa.mail.s822248.fsnavigation.handlers.SetBaseDirHandler"
+            commandId="de.bht.fpa.mail.s822248.fsnavigation.commands.sampleCommand">
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.ui.bindings">
+      <key
+            commandId="de.bht.fpa.mail.s822248.fsnavigation.commands.sampleCommand"
+            contextId="org.eclipse.ui.contexts.window"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1+6">
+      </key>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="menu:org.eclipse.ui.main.menu?after=additions">
+         <menu
+               id="de.bht.fpa.mail.s822248.fsnavigation.menus.sampleMenu"
+               label="FS Navigation"
+               mnemonic="M">
+            <command
+                  commandId="de.bht.fpa.mail.s822248.fsnavigation.commands.sampleCommand"
+                  id="de.bht.fpa.mail.s822248.fsnavigation.menus.sampleCommand"
+                  mnemonic="S">
+            </command>
+         </menu>
+      </menuContribution>
+      <menuContribution
+            locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
+         <toolbar
+               id="de.bht.fpa.mail.s822248.fsnavigation.toolbars.sampleToolbar">
+            <command
+                  commandId="de.bht.fpa.mail.s822248.fsnavigation.commands.sampleCommand"
+                  icon="icons/sample.gif"
+                  id="de.bht.fpa.mail.s822248.fsnavigation.toolbars.sampleCommand"
+                  tooltip="Say hello world">
+            </command>
+         </toolbar>
+      </menuContribution>
+   </extension>
 
 </plugin>
